# insure-app

./: .gitignore  manage.py  pyproject.toml
.github/: dependabot.yml
insure_app/: settings.py  urls.py  wsgi.py
insure_app/api/: models.py
