[tool.poetry]
name = "insure-app"
version = "0.1.0"
description = "A simple risk management app"
authors = ["Abraham Yusuf <aaondowasey@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.9"
markdown = "^3.1"
django-filter = "^2.1"
django-cors-headers = "^2.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
